--- a/no-colour.css
+++ b/no-colour.css
@@ -36,6 +36,10 @@ html::before {
     background: var(--darker) !important;
 }
 
+html body {
+    background: var(--darker) !important;
+}
+
 /* grey footer logo */
 .footer .facepunch_logo .outer {
     fill: #aaa;
