--- a/fwqf.css
+++ b/fwqf.css
@@ -2,7 +2,8 @@
 .ql-editor > blockquote::before {content:"" !important; display:none;}
 .ql-editor > blockquote {
     box-shadow: 1px 0px #000 inset, -1px 0px #000 inset;
-    background-color: rgba(44,125,189,0.2) !important;
+    /*background-color: rgba(44,125,189,0.2) !important;
+    */
     font-size: 0.8rem !important;
     display: block !important;
     padding-right: 1rem;
@@ -18,7 +19,8 @@
 
 .ql-editor > blockquote:first-of-type::before{
     display:block;
-    background-color: #2c7dbd !important;
+    /*background-color: #2c7dbd !important;
+    */
     color: #fff;
     padding: 0.3rem;
     font-size: 0.8rem;
