--- a/fwqf.css
+++ b/fwqf.css
@@ -17,16 +17,15 @@
 }*/
 
 .ql-container.ql-snow .ql-editor blockquote {
-    border-left: 2px solid #3598e6;
-    /*background-color: #d5e5f2;
-    */
+    border-left: 2px solid #555;
+    background-color: #444;
     line-height: 1.5em;
 }
 
 .ql-editor > blockquote:first-of-type {
-    box-shadow: 1px 1px #000 inset, -1px 1px #000 inset;
-    margin-right:1rem;
-    padding-top:0.8rem;
+    box-shadow: 1px 1px #777 inset, -1px 1px #777 inset;
+    margin-right: 1rem;
+    padding-top: 0.8rem;
 }
 
 .ql-editor > blockquote:first-of-type::before {
@@ -43,21 +42,21 @@
 }
 
 .ql-editor > blockquote:last-of-type {
-    box-shadow: 1px -1px #000 inset, -1px -1px #000 inset;
+    box-shadow: 1px -1px #777 inset, -1px -1px #777 inset;
 }
 
 /* Small quotes can look nicer since we don't have to rely on display: table-row */
 .ql-editor > blockquote:only-of-type {
     display: table !important;
     padding: 0.8rem 1rem 1rem 1rem;
-    box-shadow: 1px 1px #000 inset, -1px -1px #000 inset;
+    box-shadow: 1px 1px #777 inset, -1px -1px #777 inset;
 }
 .ql-editor > blockquote:only-of-type::before {
-    width:calc(100% + 2rem);
-    margin-left:-1rem;
+    width: calc(100% + 2rem);
+    margin-left: -1rem;
 }
 .ql-editor > blockquote:only-of-type::after {
-    padding-right:0 !important;
+    padding-right: 0 !important;
 }
 
 /* end better block quotes */
