--- a/fwqf.css
+++ b/fwqf.css
@@ -25,7 +25,7 @@
 .ql-editor > blockquote:first-of-type {
     box-shadow: 1px 1px #777 inset, -1px 1px #777 inset;
     margin-right: 1rem;
-    /* padding-top: 0.8rem; */
+    padding-top: 0.8rem;
 }
 
 .ql-editor > blockquote:first-of-type::before {
@@ -36,9 +36,11 @@
     padding: 0.3rem;
     font-size: 0.8rem;
     margin-bottom: 1rem;
-    margin-left:-1rem;
+    margin-left: -1rem;
     margin-top: -0.8rem;
+    /*
     width: calc(100% + 2rem);
+    */
 }
 
 .ql-editor > blockquote:last-of-type {
@@ -53,7 +55,9 @@
 }
 
 .ql-editor > blockquote:only-of-type::before {
+    /*
     width: calc(100% + 2rem);
+    */
     margin-left: -1rem;
 }
 
