--- a/partlyawesome.css
+++ b/partlyawesome.css
@@ -30,5 +30,8 @@
 /* reaction-scrollbars.css */
 @import url('https://partlyawesome.github.io/ad2-no-colour/reaction-scrollbars.css');
 
+/* better-block-quotes.css */
+@import url('https://partlyawesome.github.io/ad2-no-colour/better-block-quotes.css');
+
 /* Facepunch Mobile Fix */
 @import url('https://diwako.github.io/fpcss/mobile.css');
