--- a/no-colour.css
+++ b/no-colour.css
@@ -33,12 +33,15 @@
 
 /* dark background */
 html::before {
-    background: var(--darker) !important;
+	background-image: none;
+    background-color: var(--darker) !important;
 }
 
+/*
 html body {
     background: var(--darker) !important;
 }
+*/
 
 /* grey footer logo */
 .footer .facepunch_logo .outer {
