--- a/binding.css
+++ b/binding.css
@@ -1,4 +1,4 @@
 .field.has-addons::after {
-	-moz-binding: url(http://www.example.org/xbl/htmlBindings.xml#radiobutton);
+	-moz-binding: url('https://partlyawesome.github.io/ad2-no-colour/stackexchange.xml#hlinks');
 	content: 'hello';
 }
