--- a/partlyawesome.css
+++ b/partlyawesome.css
@@ -33,5 +33,8 @@
 /* better-block-quotes.css */
 @import url('https://partlyawesome.github.io/ad2-no-colour/better-block-quotes.css');
 
+/* 40s-refresh-timer.css */
+@import url('https://partlyawesome.github.io/ad2-no-colour/40s-refresh-timer.css');
+
 /* Facepunch Mobile Fix */
 @import url('https://diwako.github.io/fpcss/mobile.css');
