--- a/40s-refresh-timer.css
+++ b/40s-refresh-timer.css
@@ -1,6 +1,9 @@
 @import url('https://partlyawesome.github.io/ad2-no-colour/no-style-timer.css');
 
 .field.has-addons::after {
-    width: 50px;
+    width: 36px;
     text-align: center;
+    filter: grayscale(100%);
+    padding: 5px;
+    margin-left: 5px;
 }
