--- a/no-colour.css
+++ b/no-colour.css
@@ -40,7 +40,8 @@ html {
     background-color: var(--darker) !important;
 }
 
-html body {
+/* restore gradient */
+#wrapper {
     background: linear-gradient(to top, rgba(51,51,51,0.6), transparent 300px);
 }
 
