--- a/general-fixes.css
+++ b/general-fixes.css
@@ -7,5 +7,10 @@
 
 /* increase twitter iframe height - might get increased later */
 .ec_iframely_root .ec_iframely .iframely-embed {
-	max-height: 900px;
+    max-height: 900px;
+}
+
+/* fix cursor on embedded video */
+.ql-editor > * {
+    cursor: auto !important;
 }
