--- a/fpsh.css
+++ b/fpsh.css
@@ -15,3 +15,7 @@ html::before {
     width: 1330px;
     max-width: 1330px;
 }
+
+#header .navbar-main.navbar.is-dark .navbar-brand .navbar-item.logo {
+    background-image: url(https://files.facepunch.com/forum/upload/237007/348837b5-4c91-4b6d-bd0d-f5ba0cf5c5e1/Seymour_Skinner.png);
+}
