--- a/partlyawesome.css
+++ b/partlyawesome.css
@@ -1,10 +1,10 @@
 /* this file is all my imports what what they do */
 
 /* Awfully Dark 2 */
-@import url('https://pgsil.github.io/awfullydark2/styles.css');
+@import url(https://inaciogonzalesn.bitbucket.io/styles.css);
 
 /* Double Column */
-@import url('https://pgsil.github.io/awfullydark2/optionals/dblClmn.css');
+@import url('https://stylepunch.club/cached/doublecolumn.css');
 
 /* Autohide Sidebar */
 @import url('https://pgsil.github.io/awfullydark2/optionals/sdbr.css');
