--- a/partlyawesome.css
+++ b/partlyawesome.css
@@ -1,7 +1,7 @@
 /* this file is all my imports what what they do */
 
 /* Awfully Dark 2 */
-@import url(https://inaciogonzalesn.bitbucket.io/styles.css);
+@import url('https://inaciogonzalesn.bitbucket.io/styles.css');
 
 /* Double Column */
 @import url('https://stylepunch.club/cached/doublecolumn.css');
